argocd/ingress/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: haproxy-controller
  labels:
    app.kubernetes.io/name: haproxy-ingress
    app.kubernetes.io/managed-by: argocd
